"Update package version, fix whitespace in App.jsx, and modify database.js with error handling and query updates"

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 }
 
 textarea::-webkit-scrollbar,
-body::-webkit-scrollbar,.scroll-hidden::-webkit-scrollbar {
+body::-webkit-scrollbar,
+.scroll-hidden::-webkit-scrollbar {
   display: none;
 }
 
@@ -16,8 +17,8 @@ textarea {
 
 .h-postimg {
   max-height: 40rem;
-  max-width: 32rem;
-  object-fit: fill;
+  max-width: 30rem;
+  object-fit: cover;
 }
 
 .max-h-popup {
@@ -44,11 +45,10 @@ textarea {
   font-family: "Dancing Script", cursive;
 }
 
-@media screen and (maxwidth:650px) {
-  .overflow{
+@media screen and (maxwidth: 650px) {
+  .overflow {
     max-width: 100px;
   }
-  
 }
 
 @keyframes drop {
